; ModuleID = '/home/carl/AnghaBench/linux/fs/jffs2/extr_acl.c___jffs2_set_acl.c'
source_filename = "/home/carl/AnghaBench/linux/fs/jffs2/extr_acl.c___jffs2_set_acl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.posix_acl = type { i32 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@ENODATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, i32, %struct.posix_acl*)* @__jffs2_set_acl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__jffs2_set_acl(%struct.inode* %0, i32 %1, %struct.posix_acl* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.inode*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.posix_acl*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.posix_acl* %2, %struct.posix_acl** %7, align 8
  store i8* null, i8** %8, align 8
  store i64 0, i64* %9, align 8
  %11 = load %struct.posix_acl*, %struct.posix_acl** %7, align 8
  %12 = icmp ne %struct.posix_acl* %11, null
  br i1 %12, label %13, label %23

13:                                               ; preds = %3
  %14 = load %struct.posix_acl*, %struct.posix_acl** %7, align 8
  %15 = call i8* @jffs2_acl_to_medium(%struct.posix_acl* %14, i64* %9)
  store i8* %15, i8** %8, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = call i64 @IS_ERR(i8* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %13
  %20 = load i8*, i8** %8, align 8
  %21 = call i32 @PTR_ERR(i8* %20)
  store i32 %21, i32* %4, align 4
  br label %41

22:                                               ; preds = %13
  br label %23

23:                                               ; preds = %22, %3
  %24 = load %struct.inode*, %struct.inode** %5, align 8
  %25 = load i32, i32* %6, align 4
  %26 = load i8*, i8** %8, align 8
  %27 = load i64, i64* %9, align 8
  %28 = call i32 @do_jffs2_setxattr(%struct.inode* %24, i32 %25, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8* %26, i64 %27, i32 0)
  store i32 %28, i32* %10, align 4
  %29 = load i8*, i8** %8, align 8
  %30 = icmp ne i8* %29, null
  br i1 %30, label %37, label %31

31:                                               ; preds = %23
  %32 = load i32, i32* %10, align 4
  %33 = load i32, i32* @ENODATA, align 4
  %34 = sub nsw i32 0, %33
  %35 = icmp eq i32 %32, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %31
  store i32 0, i32* %10, align 4
  br label %37

37:                                               ; preds = %36, %31, %23
  %38 = load i8*, i8** %8, align 8
  %39 = call i32 @kfree(i8* %38)
  %40 = load i32, i32* %10, align 4
  store i32 %40, i32* %4, align 4
  br label %41

41:                                               ; preds = %37, %19
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local i8* @jffs2_acl_to_medium(%struct.posix_acl*, i64*) #1

declare dso_local i64 @IS_ERR(i8*) #1

declare dso_local i32 @PTR_ERR(i8*) #1

declare dso_local i32 @do_jffs2_setxattr(%struct.inode*, i32, i8*, i8*, i64, i32) #1

declare dso_local i32 @kfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
